test_regress/t/t_90958_unpacked_array_assignment_bad.out
%Error: t/t_90958_unpacked_array_assignment_bad.v:24:20: Illegal assignment: Unmatched array sizes in dimension 0 (3 v.s. 2)
                                                       : ... note: In instance 't'
   24 |   assign unpackedB = unpackedA;
      |                    ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_90958_unpacked_array_assignment_bad.v:25:20: Illegal assignment: Unmatched number of unpacked dimensions ('logic$[0:2]' v.s. 'logic$[0:2][0:1]')
                                                       : ... note: In instance 't'
   25 |   assign unpackedB = unpackedC;
      |                    ^
%Error: t/t_90958_unpacked_array_assignment_bad.v:26:20: Illegal assignment: Unmatched array sizes in dimension 0 (4 v.s. 3)
                                                       : ... note: In instance 't'
   26 |   assign unpackedD = unpackedC;
      |                    ^
%Error: t/t_90958_unpacked_array_assignment_bad.v:27:20: Illegal assignment: Array element types are not equivalent ('struct{}$unit::struct_t' v.s. 'logic')
                                                       : ... note: In instance 't'
   27 |   assign unpackedE = unpackedD;
      |                    ^
%Warning-WIDTHEXPAND: t/t_90958_unpacked_array_assignment_bad.v:27:20: Operator ASSIGNW expects 64 bits on the Assign RHS, but Assign RHS's VARREF 'unpackedD' generates 1 bits.
                                                                     : ... note: In instance 't'
   27 |   assign unpackedE = unpackedD;
      |                    ^
                      ... For warning description see https://verilator.org/warn/WIDTHEXPAND?v=latest
                      ... Use "/* verilator lint_off WIDTHEXPAND */" and lint_on around source to disable this message.
%Error: t/t_90958_unpacked_array_assignment_bad.v:28:23: Illegal assignment: 'logic$[0:1]' is not assignment compatible with 'logic'
                                                       : ... note: In instance 't'
   28 |   assign nonAggregate = unpackedA;
      |                       ^
%Error: Exiting due to
